# projectSoul

./: .env.example  .gitignore  .mcp.json.example  .soul-mood  AGENTS.md  CHANGELOG.md  CLAUDE.md  HEARTBEAT.md  LICENSE  README.de.md  README.md  SEED_SPEC.md
.github/workflows/: release.yml
.soul-events/: current.jsonl
create-soul/: package-lock.json  package.json  tsconfig.json
create-soul/src/: index.ts
docs/: architecture.html  architektur.html  index.html
hooks/: README.md  index-tracker.sh  session-end-guard.sh  soul-pulse.sh
soul-app/: project.yml
soul-card/: package.json
soul-chain/: package-lock.json  package.json
soul-engine/: Dockerfile  docker-compose.yml  package-lock.json  package.json
soul-monitor/: README.md  package-lock.json  package.json
soul-os/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
soul-os/src-tauri/: Cargo.toml  tauri.build.conf.json  tauri.conf.json
soul-os/src-tauri/capabilities/: default.json
soul-os/src-tauri/icons/: icon.icns
soul-os/src-tauri/resources/: .gitignore
soul-os/src-tauri/resources/soul-chain/: package-lock.json
soul-os/src-tauri/resources/soul-chain/src/: chain.js
soul-os/src-tauri/resources/soul-engine/: package-lock.json  package.json
soul-os/src-tauri/resources/soul-engine/src/: api-channel.js  attention.js  block-templaters.js  engine.js  founding.js  heartbeat.js  impulse.js  multimodal.js  prompt.js
soul-os/src-tauri/src/: commands.rs  config.rs  founding.rs  lib.rs  main.rs  node.rs  pty.rs  sidecar.rs  types.rs  watcher.rs
(+183 files in other folders)
