[package]
name = "soul-os"
version = "0.3.1"
description = "SoulOS — Operating System for AI Souls"
authors = ["ProjectSoul"]
edition = "2021"

[lib]
name = "soul_os_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
dirs-next = "2"
window-vibrancy = "0.6"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
